// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render default snapshot 1`] = `
.c0 {
  background: #263238;
  width: 100%;
  height: 4.11em;
  display: flex;
  flex-flow: row;
  justify-content: space-around;
  align-items: center;
}

.c1 {
  font-family: 'Oswald',Impact,'Franklin Gothic Bold',sans-serif;
  text-decoration: none;
  color: #546E7A;
  fill: #546E7A;
  font-size: 1.33em;
}

.c1:hover {
  color: #FFCC00;
  fill: #FFCC00;
  cursor: pointer;
}

.c1:active,
.c1.active {
  color: #FFCC00;
  fill: #FFCC00;
}

<nav
  class="c0"
>
  <a
    class="c1"
    color="secondary"
    href="/about"
  >
    About
  </a>
  <a
    class="c1"
    color="secondary"
    href="/projects"
  >
    Projects
  </a>
  <a
    class="c1"
    color="secondary"
    href="/contact"
  >
    Contact
  </a>
</nav>
`;

exports[`<Nav /> should render snapshot with not isEnglish 1`] = `
.c0 {
  background: #263238;
  width: 100%;
  height: 4.11em;
  display: flex;
  flex-flow: row;
  justify-content: space-around;
  align-items: center;
}

.c1 {
  font-family: 'Oswald',Impact,'Franklin Gothic Bold',sans-serif;
  text-decoration: none;
  color: #546E7A;
  fill: #546E7A;
  font-size: 1.33em;
}

.c1:hover {
  color: #FFCC00;
  fill: #FFCC00;
  cursor: pointer;
}

.c1:active,
.c1.active {
  color: #FFCC00;
  fill: #FFCC00;
}

<nav
  class="c0"
>
  <a
    class="c1"
    color="secondary"
    href="/about"
  >
    Sobre Mi
  </a>
  <a
    class="c1"
    color="secondary"
    href="/projects"
  >
    Proyectos
  </a>
  <a
    class="c1"
    color="secondary"
    href="/contact"
  >
    Contacto
  </a>
</nav>
`;
